--- a/index.html
+++ b/index.html
@@ -7,19 +7,107 @@
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    const root = ReactDOM.createRoot(document.getElementById("root"));
-    const App = () => {
-      const [counter, setCounter] = React.useState(10);
-      const onClick = () => {
-        setCounter(counter + 1);
+    const TimeConverter = () => {
+      const [amount, setAmount] = React.useState(0);
+      const [inverted, setInverted] = React.useState(false);
+      const onChange = (event) => {
+        setAmount(event.target.value);
+      };
+      const reset = () => setAmount(0);
+      const onInvert = () => {
+        reset();
+        setInverted((current) => !current);
       };
       return (
         <div>
-          <h3>Count: {counter}</h3>
-          <button onClick={onClick}>Click me</button>
+          <h3>{inverted ? "Hours to Minutes" : "Minutes to Hours"}</h3>
+          <div>
+            <label htmlFor="minutes">Minutes</label>
+            <input
+              value={inverted ? Math.round(amount * 60) : amount}
+              id="minutes"
+              placeholder="Minutes"
+              type="number"
+              onChange={onChange}
+              disabled={inverted}
+            />
+          </div>
+          <div>
+            <label htmlFor="hours">Hours</label>
+            <input
+              value={inverted ? amount : Math.round(amount / 60)}
+              id="hours"
+              placeholder="Hours"
+              type="number"
+              onChange={onChange}
+              disabled={!inverted}
+            />
+          </div>
+          <button onClick={reset}>reset</button>
+          <button onClick={onInvert}>{inverted ? "Hours" : "Minutes"}</button>
         </div>
       );
     };
+    const LengthConverter = () => {
+      const [amount, setAmount] = React.useState(0);
+      const [inverted, setInverted] = React.useState(false);
+      const onChange = (event) => {
+        setAmount(event.target.value);
+      };
+      const onInvert = (event) => {
+        reset();
+        setInverted((current) => !current);
+      };
+      const reset = () => setAmount(0);
+      return (
+        <div>
+          <h3>{inverted ? "Mile to Km" : "Km to Mile"}</h3>
+          <div>
+            <label htmlFor="km">Km</label>
+            <input
+              value={inverted ? amount * 1.609344 : amount}
+              id="km"
+              placeholder="Km"
+              type="number"
+              onChange={onChange}
+              disabled={inverted}
+            />
+          </div>
+          <div>
+            <label htmlFor="Mile">Mile</label>
+            <input
+              value={inverted ? amount : amount * 0.621371}
+              id="Mile"
+              placeholder="Mile"
+              type="number"
+              onChange={onChange}
+              disabled={!inverted}
+            />
+          </div>
+          <button onClick={onInvert}>Invert</button>
+          <button onClick={reset}>reset</button>
+        </div>
+      );
+    };
+    const App = () => {
+      const [index, setIndex] = React.useState("0");
+      const onSelect = (event) => {
+        setIndex(event.target.value);
+      };
+      return (
+        <div>
+          <h1>Super converter</h1>
+          <select value={index} onChange={onSelect}>
+            <option value="0">Time</option>
+            <option value="1">Length</option>
+          </select>
+          <hr />
+          {index === "0" ? <TimeConverter /> : null}
+          {index === "1" ? <LengthConverter /> : null}
+        </div>
+      );
+    };
+    const root = ReactDOM.createRoot(document.getElementById("root"));
     root.render(<App />);
   </script>
 </html>
